Mvn test works for flytekit-java module
Signed-off-by: Nelson Arapé <nelson@spotify.com>